# Tristan_Tardif-Morency_TFUG

./: OMEGA_IGNITION.md  Procfile  README.md  ignite.py  index.html  render.yaml  requirements.txt  vercel.json
.github/: deploy.yml
TTM-Pipeline/Optech_Raman_AI_Release_Ready/: .gitignore  pyproject.toml
TTM-Pipeline/Optech_Raman_AI_Release_Ready/examples/: tiny_example.csv
TTM-Pipeline/Optech_Raman_AI_Release_Ready/pipeline/: dvc.yaml  report_gen.py
TTM-Pipeline/Optech_Raman_AI_Release_Ready/tests/: test_features_golden.py
TTM-Pipeline/Optech_Raman_AI_Release_Ready/tests/golden_data/: polymer_1001.csv
TTM-Pipeline/TTM-Optech-Raman-AI_Runtime_Bundle/TTM-Optech-Raman-AI/: .gitignore  .pre-commit-config.yaml  A_appendix_refs.tex  Dockerfile  MANIFEST.json  Makefile  README.md  README_RUN.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
TTM-Pipeline/TTM-Optech-Raman-AI_Runtime_Bundle/TTM-Optech-Raman-AI/metrics/: ablation.csv  summary.json
TTM-Pipeline/TTM-Optech-Raman-AI_Runtime_Bundle/TTM-Optech-Raman-AI/notebooks/: 01_preprocessing_overview.ipynb  01a_io_standards_demo.ipynb  01b_qc_and_alignment.ipynb  01c_baseline_and_smoothing.ipynb  01d_normalization_and_export.ipynb  02_featurization.ipynb  03_modeling_and_calibration.ipynb  04_evaluation_and_report.ipynb
TTM-Pipeline/TTM-Optech-Raman-AI_Runtime_Bundle/TTM-Optech-Raman-AI/plots/: ablation_table.tex  calibration_table.tex
TTM-Pipeline/TTM-Optech-Raman-AI_Runtime_Bundle/TTM-Optech-Raman-AI/tests/: test_features_fwt.py  test_features_tfuq.py  test_imports.py  test_isotonic_sigma.py  test_preprocess_basic.py
libs/ai7_tristan2_private_lib/: ACCESS_POLICY.md  README.md  library_manifest.json  pyproject.toml
libs/ai7_tristan2_private_lib/docs/: INTERFACE_X100_BLUEPRINT.md  NATIVE_FIRST_DOCTRINE.md  PARALLEL_COUPLED_AUTONOMOUS_GOVERNANCE.md  PRIVATE_STACK_BOOTSTRAP.md  QUEBEC_ORG_GAME_CANONICAL_PACKET.md  ZERO_TOUCH_TFUGA_DRIVE_RUNNER.md
libs/ai7_tristan2_private_lib/examples/: bootstrap_private_stack.py  parallel_coupled_governance_demo.py  zero_touch_tfuga_drive_runner.py
libs/ai7_tristan2_private_lib/tests/: test_smoke_private_lib.py
(+971 files in other folders)
