
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optech-raman-ai"
version = "0.1.0"
description = "Reproducible Raman AI pipeline (Optech) with DVC, Parquet, TFUG/FWT features, and Bayesian heads."
authors = [{name = "Tristan Tardif-Morency"}, {name = "GPT-5 Thinking"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "pandas>=2.0",
  "pyarrow>=12.0",
  "typer>=0.9",
  "matplotlib>=3.8",
  "joblib>=1.3",
  "pydantic>=2.0",
  "jinja2>=3.1",
  "scikit-learn>=1.3",
  "rich>=13.0"
]

[project.scripts]
raman = "raman_ai.cli:app"

[tool.setuptools.package-data]
raman_ai = ["report/templates/*", "report/biblio/*"]

[tool.setuptools.packages.find]
where = ["src"]
